# SocialMemAgent

./: .gitignore  README.md  README_EN.md  TESTING_GUIDE.md
agents/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/.agent/skills/: 00-bkci-global-architecture  01-new  02-plan  05-review  10x-chat  111-java-maven-dependencies  12-factor-apps  12-principles-of-animation  1k-app-upgrade-test  1k-coding-patterns  1k-create-pr  1k-cross-platform  1k-defi-module-integration  1k-dev-commands  1k-git-workflow  1k-i18n  1k-pkg-upgrade-review  1k-retrospective  1k-sentry  1k-sentry-analysis  1k-state-management  1k-ui-recipes  302ai-api-integration  37soul  3d-graphics  3d-modeling  5d-thinking  5whys  8bit-docs-patterns  _svg-drawing  _video-watching  a  a-b-testing  a-stock-daily-report  a2ui-embed  (+9229 more)
agents/skills/: 00-andruia-consultant  00-bkci-global-architecture  01-new  02-plan  05-review  1-min-eval  10-andruia-skill-smith  104-sourcing  10x-chat  110-java-maven-best-practices  111-java-maven-dependencies  12-factor-apps  12-principles-of-animation  12306  14kb-club  173-java-agents  1k-adding-chains  1k-adding-socket-events  1k-app-upgrade-test  1k-architecture  1k-code-quality  1k-code-review-pr  1k-coding-patterns  1k-create-pr  1k-cross-platform  1k-date-formatting  1k-defi-module-integration  1k-dev-commands  1k-error-handling  1k-feature-guides  1k-git-workflow  1k-i18n  1k-monitor-pr-ci  1k-new-skill  1k-patching-native-modules  1k-performance  1k-pkg-upgrade-review  1k-platform-requirements  1k-retrospective  1k-sentry  (+20497 more)
agents/src/: auth.db  main.py
agents/tests/: test_context_block.py
(+253592 files in other folders)
